# msr

./: .env.example  .gitignore  Cargo.toml  config.toml.example  readme.md
.github/workflows/: release.yml
src/: data.rs  main.rs
