[package]
name = "msr"
description = "mastodon client in rust"
version = "0.0.9"
authors = ["syui <syui@syui.cf>"]
edition = "2021"

[dependencies]
seahorse = "*"
dotenv = "0.15"
mammut = "0.13.0"
serde_derive = "1.0"
serde_json = "1.0"
serde = "*"
config = { git = "https://github.com/mehcode/config-rs", branch = "master" }
shellexpand = "*"
curl = "*"
image = "*"
os_type = "2.4"

misskey = "*"
anyhow = "1.0"
tokio = { version = "1.22.0", features = ["full"] }
structopt = "0.3.16"
futures = "0.3.5"
url = { version = "2.0", features = ["serde"] }
