[package]
name = "chatgpt-rs"
description = "openai api client"
version = "0.0.1"
authors = ["syui <syui@syui.cf>"]
edition = "2021"

[dependencies]
seahorse = "*"
dotenv = "0.15"
serde_derive = "1.0"
serde_json = "1.0"
serde = "*"
config = { git = "https://github.com/mehcode/config-rs", branch = "master" }
shellexpand = "*"
toml = "*"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
structopt = "0.3.16"
futures = "0.3.5"
reqwest = { version = "*", features = ["json"] }
